title fix on mobile

--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -92,7 +92,7 @@
     margin-top: 72%;
     text-align: center;
     position: absolute;
-    mix-blend-mode: screen;
+    
     font-size: 9.5vw;
     background: white;
     width: 100%;
